--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="mark-it">
 
 <head>
     <meta charset="UTF-8">
@@ -10,56 +10,60 @@
 </head>
 
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container"><a href="/" class="navbar-brand">Mark It</a>
-            <button data-toggle="collapse" data-target=".navHeaderCollapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-            <div class="collapse navbar-collapse navHeaderCollapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Attendance <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">New</a></li>
-                            <li><a href="#">Reports</a></li>
-                            <li><a href="#">Summary</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Students <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">New</a></li>
-                            <li><a href="#">Reports</a></li>
-                            <li><a href="#">Summary</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Reports <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Daily</a></li>
-                            <li><a href="#">Weekly</a></li>
-                            <li><a href="#">Monthly</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Announcements <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">New</a></li>
-                            <li><a href="#">Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">About Us <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Feedback</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Profile <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Details</a></li>
-                            <li><a href="/logout">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
+    <div class="container-fluid container-padding">
+        <div class="row">
+            <div class="col-xs-12 col-lg-12">
+                <div class="navbar navbar-default navbar-fixed-top">
+                    <div class="container"><a href="/" class="navbar-brand">Mark It</a>
+                        <button data-toggle="collapse" data-target=".navHeaderCollapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <div class="collapse navbar-collapse navHeaderCollapse">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="#">Home</a></li>
+                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Attendance <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">New</a></li>
+                                        <li><a href="#">Reports</a></li>
+                                        <li><a href="#">Summary</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Students <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">New</a></li>
+                                        <li><a href="#">Reports</a></li>
+                                        <li><a href="#">Summary</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Reports <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Daily</a></li>
+                                        <li><a href="#">Weekly</a></li>
+                                        <li><a href="#">Monthly</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Announcements <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">New</a></li>
+                                        <li><a href="#">Details</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">About Us <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="#">Feedback</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Profile <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Details</a></li>
+                                        <li><a href="/logout">Logout</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid container-padding">
         <div id="notify-container" class="row">
             <div class="col-xs-12 col-lg-12 message">
                 <div role="alert" class="alert alert-info alert-dismissible">
@@ -67,18 +71,45 @@
                 </div>
             </div>
         </div>
-        <div id="app-container" class="row mtl">
-            <div class="jumbotron">
-                <h1>Mark It!</h1>
-                <p>A free responsive web application for attendance tracking system.</p>
-                <p>Attendance management is important to every single organisation, it can determine whether or not a business will be successful in the future. Businesses will have to keep a track of employees, this being their main concern and a lot of other things. Monitoring attendance helps in the long term for a business, as an employer will be able to tell which employees arrive early, which arrive late and who has the most absences without any valid reason. This could help an employer in deciding which employees are most suitable to work in the business, having employees who arrive to work on time means that the day-to-day tasks of the organisation will be fulfilled. Employees within an organisation should know about their employer’s attendance and absence policy, so that they are aware of what is required of them.[1] Attendance management is also a health and safety procedure something in which that has to be carried out. It is important because in case of an emergency that was to arise in a workplace like a fire, then if they register in the company they will know how many people are inside a building. It is important to manage a set of workforce as it can lead to higher profits as well as an increase in productivity.[2] If you have a look on the other side of what will happen if a business does not manage their attendance, it will mean that they will have no sort of information to look back on in case if it is needed in the future. They also will not be able to keep a track on their employees on a day-to-day basis which means there is no leadership in place.[3]</p>
-                <p><a href="#" role="button" class="btn btn-primary btn-lg">Learn more</a></p>
+        <div id="app-container" class="row mtl" ng-controller="UserProfileController as user">
+            <div class="col-xs-12 col-lg-8 col-lg-offset-2 mtl">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">User Details</h3>
+                    </div>
+                    <div class="panel-body text-center">
+                        <div class="row mts">
+                            <div class="col-xs-12 col-lg-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon" id="basic-addon1">User Name</span>
+                                    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" ng-model="user.model.DisplayName">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mts">
+                            <div class="col-xs-12 col-lg-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon" id="basic-addon1">Email Id</span>
+                                    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" ng-model="user.model.Email">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mts">
+                            <div class="col-xs-12 col-lg-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon" id="basic-addon1">User Id</span>
+                                    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1" ng-model="user.model.Id">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <script type="text/javascript" src="/javascripts/libraries/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascripts/libraries/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/javascripts/application.js"></script>
+        <script type="text/javascript" src="/javascripts/libraries/jquery.min.js"></script>
+        <script type="text/javascript" src="/javascripts/libraries/angular.min.js"></script>
+        <script type="text/javascript" src="/javascripts/libraries/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/javascripts/application.js"></script>
 </body>
 
 </html>
